--- a/app/views/attendees/index.html.erb
+++ b/app/views/attendees/index.html.erb
@@ -2,7 +2,7 @@
 
 <h1>Attendees</h1>
 
-<table>
+<table class="table">
   <thead>
     <tr>
       <th>First Name</th>
@@ -12,7 +12,7 @@
       <th>Age</th>
       <th>Category</th>
       <th>Group</th>
-      <th colspan="3"></th>
+      <th>Actions</th>
     </tr>
   </thead>
 
@@ -26,15 +26,15 @@
         <td><%= attendee.age %></td>
         <td><%= attendee.category %></td>
         <td><%= attendee.group %></td>
-        <td><%= link_to 'Show', attendee_path(attendee) %></td>
-        <td><%= link_to 'Edit', edit_attendee_path(attendee) %></td>
-        <td><%= link_to 'Destroy', attendee_path(attendee), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td>
+          <%= link_to 'View', attendee_path(attendee) %>
+          <%= link_to 'Edit', edit_attendee_path(attendee) %>
+          <%= link_to 'Delete', attendee_path(attendee), method: :delete, data: { confirm: 'Are you sure?' } %>
+        </td>
       </tr>
     <% end %>
   </tbody>
 </table>
 
-<br>
-
 <%= link_to 'Add Attendee', new_attendee_path, class: "btn btn-primary" %>
-<%= link_to 'Back to Dashboard', root_path %>
+<%= link_to 'Back to Dashboard', root_path, class: "btn btn-default" %>
