--- a/app/views/attendees/show.html.erb
+++ b/app/views/attendees/show.html.erb
@@ -1,32 +1,47 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>First Name:</strong>
-  <%= @attendee.first_name %><br />
+<div class="row" >
+  <div class="col-sm-2"><label for="first_name"><b>First Name:</b></label></div>
+  <div class="col-sm-10"><%= @attendee.first_name %></div>
+</div>
 
-  <strong>Last Name:</strong>
-  <%= @attendee.last_name %><br />
+<div class="row" >
+  <div class="col-sm-2"><label for="last_name"><b>Last Name:</b></label></div>
+  <div class="col-sm-10"><%= @attendee.last_name %></div>
+</div>
 
-  <strong>Contact No:</strong>
-  <%= @attendee.contact_no %><br />
+<div class="row" >
+  <div class="col-sm-2"><label for="contact_no"><b>Contact No:</b></label></div>
+  <div class="col-sm-10"><%= @attendee.contact_no %></div>
+</div>
 
-  <strong>Contact No:</strong>
-  <%= @attendee.contact_no %><br />
+<div class="row" >
+  <div class="col-sm-2"><label for="email"><b>Email:</b></label></div>
+  <div class="col-sm-10"><%= @attendee.email %></div>
+</div>
 
-  <strong>Age:</strong>
-  <%= @attendee.contact_no %><br />
+<div class="row" >
+  <div class="col-sm-2"><label for="age"><b>Age:</b></label></div>
+  <div class="col-sm-10"><%= @attendee.age %></div>
+</div>
 
-  <strong>Photo URL:</strong>
-  <%= @attendee.photo_url %><br />
+<div class="row" >
+  <div class="col-sm-2"><label for="photo_url"><b>Photo URL:</b></label></div>
+  <div class="col-sm-10"><%= @attendee.photo_url %></div>
+</div>
 
-  <strong>Category:</strong>
-  <%= @attendee.category %><br />
+<div class="row" >
+  <div class="col-sm-2"><label for="category"><b>Category:</b></label></div>
+  <div class="col-sm-10"><%= @attendee.category %></div>
+</div>
 
-  <strong>Group:</strong>
-  <%= @attendee.group %><br />
-
+<div class="row" >
+  <div class="col-sm-2"><label for="group"><b>Group:</b></label></div>
+  <div class="col-sm-10"><%= @attendee.group %></div>
+</div>
+</br>
 <div class="actions">
     <%= link_to 'Edit', edit_attendee_path(@attendee), class: "btn btn-info" %>
-    <%= link_to 'Destroy', attendee_path(@attendee), class: "btn btn-danger", method: :delete, data: { confirm: 'Are you sure?' } %>
+    <%= link_to 'Delete', attendee_path(@attendee), class: "btn btn-danger", method: :delete, data: { confirm: 'Are you sure?' } %>
     <%= link_to 'Back to Attendees', attendees_path, class: "btn btn-default" %>
 </div>
