--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -10,15 +10,23 @@
       </ul>
     </div>
   <% end %>
+  </br>
+  <div class="form-horizontal">
+    <div class="form-group">
+      <label for="date" class="col-sm-2">Event Date</label>
+      <div class="col-sm-10" ><%= f.text_field :date, class: "form-control" %></div>
+    </div>
 
-  <strong>Event Date:</strong>
-  <%= f.text_field :date %><br />
+    <div class="form-group">
+      <label for="type" class="col-sm-2">Event Type</label>
+      <div class="col-sm-10"><%= f.text_field :category, class: "form-control" %></div>
+    </div>
 
-  <strong>Event Type:</strong>
-  <%= f.text_field :category %><br />
-
-  <strong>Venue:</strong>
-  <%= f.text_field :venue %><br />
+    <div class="form-group">
+      <label for="date" class="col-sm-2">Venue</label>
+      <div class="col-sm-10"><%= f.text_field :venue, class: "form-control" %></div>
+    </div>
+  </div>
 
   <div class="actions">
     <%= f.submit class: "btn btn-primary" %>
