--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -2,13 +2,13 @@
 
 <h1>Events</h1>
 
-<table>
+<table class="table">
   <thead>
     <tr>
       <th>Date</th>
       <th>Event Type</th>
       <th>Venue</th>
-      <th colspan="3"></th>
+      <th>Actions</th>
     </tr>
   </thead>
 
@@ -18,15 +18,15 @@
         <td><%= event.date %></td>
         <td><%= event.category %></td>
         <td><%= event.venue %></td>
-        <td><%= link_to 'Show', event_path(event) %></td>
-        <td><%= link_to 'Edit', edit_event_path(event) %></td>
-        <td><%= link_to 'Destroy', event_path(event), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td>
+          <%= link_to 'View', event_path(event) %>
+          <%= link_to 'Edit', edit_event_path(event) %>
+          <%= link_to 'Delete', event_path(event), method: :delete, data: { confirm: 'Are you sure?' } %>
+        </td>
       </tr>
     <% end %>
   </tbody>
 </table>
 
-<br>
-
 <%= link_to 'Add Event', new_event_path, class: "btn btn-primary" %>
-<%= link_to 'Back to Dashboard', root_path %>
+<%= link_to 'Back to Dashboard', root_path, class: "btn btn-default" %>
