--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -19,7 +19,9 @@
 
     <div class="form-group">
       <label for="type" class="col-sm-2">Event Type</label>
-      <div class="col-sm-10"><%= f.text_field :category, class: "form-control" %></div>
+      <div class="col-sm-10">
+        <%= f.select(:category, options_for_select(Event::CATEGORY)) %>
+      </div>
     </div>
 
     <div class="form-group">
