--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -83,5 +83,6 @@
 <div class="actions">
     <%= link_to 'Edit', edit_event_path(@event), class: "btn btn-info" %>
     <%= link_to 'Delete', event_path(@event), class: "btn btn-danger", method: :delete, data: { confirm: 'Are you sure?' } %>
+    <%= link_to 'Reports', event_reports_path(@event), class: "btn btn-warning" %>
     <%= link_to 'Back to Events', events_path, class: "btn btn-default" %>
 </div>
