Added event summary report

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -21,6 +21,7 @@
         <td>
           <%= link_to 'View', event_path(event) %>
           <%= link_to 'Edit', edit_event_path(event) %>
+          <%= link_to 'Summary', generate_summary_event_path(event, format: 'pdf'), method: :post %>
           <%= link_to 'Delete', event_path(event), method: :delete, data: { confirm: 'Are you sure?' } %>
         </td>
       </tr>
