--- a/app/views/reports/show.html.erb
+++ b/app/views/reports/show.html.erb
@@ -14,6 +14,47 @@
   <div class="col-sm-2"><label for="remark"><b>Remark:</b></label></div>
   <div class="col-sm-10"><%= @report.remark %></div>
 </div>
+
+<h3>Present</h3>
+
+<table class="table">
+  <thead>
+    <tr>
+      <th>Name</th>
+      <th>Category</th>
+    </tr>
+  </thead>
+
+  <tbody>
+    <% @event.attendees.group_by(@report.group).each do |attendee| %>
+      <tr>
+        <td><%= attendee.name %></td>
+        <td><%= attendee.category %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+
+<h3>Absent</h3>
+
+<table class="table">
+  <thead>
+    <tr>
+      <th>Name</th>
+      <th>Category</th>
+    </tr>
+  </thead>
+
+  <tbody>
+    <% Attendee.not_present(@event).group_by(@report.group).each do |attendee| %>
+      <tr>
+        <td><%= attendee.name %></td>
+        <td><%= attendee.category %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+
 </br>
 <div class="actions">
     <%= link_to 'Edit', edit_event_report_path(@event, @report), class: "btn btn-info" %>
