Added js for adding and removing attendees Made some UI changes for better readability

--- a/app/views/attendees/index.html.erb
+++ b/app/views/attendees/index.html.erb
@@ -24,8 +24,8 @@
         <td><%= attendee.last_name %></td>
         <td><%= attendee.contact_no %></td>
         <td><%= attendee.email %></td>
-        <td><%= attendee.gender %></td>
-        <td><%= attendee.category %></td>
+        <td><%= attendee.gender.capitalize %></td>
+        <td><%= attendee.category.capitalize %></td>
         <td><%= attendee.group %></td>
         <td><%= attendee.remark %></td>
         <td>
