--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -7,45 +7,13 @@
 
 <div class="row" >
   <div class="col-sm-2"><label for="category"><b>Event Type:</b></label></div>
-  <div class="col-sm-10"><%= @event.category %></div>
+  <div class="col-sm-10"><%= @event.category.capitalize %></div>
 </div>
 
 <div class="row" >
   <div class="col-sm-2"><label for="venue"><b>Venue:</b></label></div>
   <div class="col-sm-10"><%= @event.venue %></div>
 </div>
-
-<h3>Present</h3>
-
-<table class="table">
-  <thead>
-    <tr>
-      <th>First Name</th>
-      <th>Last Name</th>
-      <th>Contact No.</th>
-      <th>Age</th>
-      <th>Category</th>
-      <th>Group</th>
-      <th>Actions</th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @event.attendees.each do |attendee| %>
-      <tr>
-        <td><%= attendee.first_name %></td>
-        <td><%= attendee.last_name %></td>
-        <td><%= attendee.contact_no %></td>
-        <td><%= attendee.age %></td>
-        <td><%= attendee.category %></td>
-        <td><%= attendee.group %></td>
-        <td>
-          <%= link_to 'Remove', event_attendance_path(@event, Attendance.find_attendance(@event.id, attendee.id)), class: "btn btn-danger", method: :delete, data: { confirm: 'Are you sure?' } %>
-        </td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
 
 <h3>Add Attendees</h3></br>
 
@@ -64,6 +32,9 @@
 
 <%= render "events/add_attendees", event: @event, new_attendees: @new_attendees %>
 
+<h3>Present</h3>
+
+<%= render "events/attendees", event: @event %>
 
 <div class="actions">
     <%= link_to 'Edit', edit_event_path(@event), class: "btn btn-info" %>
