--- a/app/views/attendances/destroy.js.erb
+++ b/app/views/attendances/destroy.js.erb
@@ -1,5 +1,5 @@
 <% if @attendance.valid? %>
-  $("table.new-attendees").replaceWith('<%= escape_javascript(render("events/add_attendees", event: @event)) %>');
+  $("table.new-attendees").replaceWith('<%= escape_javascript(render("events/add_attendees", event: @event, new_attendees: @new_attendees)) %>');
   $("table.attendees").replaceWith('<%= escape_javascript(render("events/attendees", event: @event)) %>');
 <% else %>
   alert("Something went wrong");
