--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for [@event] do |f| %>
+<%= simple_form_for [@event] do |f| %>
   <% if @event.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@event.errors.count, "error") %> prohibited this event from being saved:</h2>
@@ -20,7 +20,11 @@
     <div class="form-group">
       <label for="type" class="col-sm-2">Event Type</label>
       <div class="col-sm-10">
-        <%= f.select(:category, options_for_select(Event::CATEGORY)) %>
+        <%= f.input :category, 
+            as: :select,
+            collection: Event::CATEGORY,
+            include_blank: false,
+            label: false %>
       </div>
     </div>
 
