--- a/app/views/events/_attendees.html.erb
+++ b/app/views/events/_attendees.html.erb
@@ -18,7 +18,7 @@
         <td><%= attendee.last_name %></td>
         <td><%= attendee.contact_no %></td>
         <td><%= attendee.age %></td>
-        <td><%= attendee.category %></td>
+        <td><%= attendee.category.capitalize %></td>
         <td><%= attendee.group %></td>
         <td>
           <%= link_to 'Remove', event_attendance_path(@event, Attendance.find_attendance(@event.id, attendee.id)), class: "btn btn-danger", method: :delete, data: { confirm: 'Are you sure?' }, remote: true %>
