--- a/app/views/reports/_form.html.erb
+++ b/app/views/reports/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for [@event, @report] do |f| %>
+<%= simple_form_for [@event, @report] do |f| %>
   <% if @report.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@report.errors.count, "error") %> prohibited this report from being saved:</h2>
@@ -21,13 +21,17 @@
     <div class="form-group">
       <label for="type" class="col-sm-2">Group</label>
       <div class="col-sm-10">
-        <%= f.select(:group, options_for_select(Attendee::GROUP)) %>
+        <%= f.input :group, 
+            as: :select,
+            collection: Attendee::GROUP,
+            include_blank: false,
+            label: false %>
       </div>
     </div>
 
     <div class="form-group">
       <label for="date" class="col-sm-2">Remark</label>
-      <div class="col-sm-10"><%= f.text_field :remark, class: "form-control" %></div>
+      <div class="col-sm-10"><%= f.input :remark, as: :text, label: false, input_html: { rows: '4', cols: '50' }, class: "form-control" %></div>
     </div>
   </div>
 
