--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -15,6 +15,11 @@
   <div class="col-sm-10"><%= @event.venue %></div>
 </div>
 
+<div class="row" >
+  <div class="col-sm-2"><label for="total"><b>Total Present:</b></label></div>
+  <div class="col-sm-10"><%= @event.attendances.count %></div>
+</div>
+
 </br>
 
 <div class="actions">
