--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -19,11 +19,22 @@
         <td><%= event.category.capitalize %></td>
         <td><%= event.venue %></td>
         <td>
-          <%= link_to 'View', event_path(event) %>
-          <%= link_to 'Edit', edit_event_path(event) %>
-          <%= link_to 'Summary', summary_event_path(event) %>
+          <%= link_to event_path(event) do %>
+            <i style="font-size:1.5em;" class="glyphicon glyphicon-eye-open" title="View"></i>
+          <% end %>
+          <%= link_to edit_event_path(event) do %>
+            <i style="font-size:1.5em;" class="glyphicon glyphicon-edit" title="Edit"></i>
+          <% end %>
+          <%= link_to summary_event_path(event) do %>
+            <i style="font-size:1.5em;" class="glyphicon glyphicon-signal" title="Summary"></i>
+          <% end %>
+          <%= link_to event_reports_path(event) do %>
+            <i style="font-size:1.5em;" class="glyphicon glyphicon-th-list" title="Reports"></i>
+          <% end %>
           <!-- <%= link_to 'PDF', generate_summary_event_path(event, format: 'pdf'), method: :post %> -->
-          <%= link_to 'Delete', event_path(event), method: :delete, data: { confirm: 'Are you sure?' } %>
+          <%= link_to event_path(event), method: :delete, data: { confirm: 'Confirm DELETE?' } do %>
+            <i style="font-size:1.5em;" class="glyphicon glyphicon-trash" title="Delete"></i>
+          <% end %>
         </td>
       </tr>
     <% end %>
