--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -32,9 +32,9 @@
             <i style="font-size:1.5em;" class="glyphicon glyphicon-th-list" title="Reports"></i>
           <% end %>
           <!-- <%= link_to 'PDF', generate_summary_event_path(event, format: 'pdf'), method: :post %> -->
-          <%= link_to event_path(event), method: :delete, data: { confirm: 'Confirm DELETE?' } do %>
+          <!-- <%= link_to event_path(event), method: :delete, data: { confirm: 'Confirm DELETE?' } do %>
             <i style="font-size:1.5em;" class="glyphicon glyphicon-trash" title="Delete"></i>
-          <% end %>
+          <% end %> -->
         </td>
       </tr>
     <% end %>
