--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -29,7 +29,7 @@
     <%= link_to 'Back to Events', events_path, class: "btn btn-default" %>
 </div>
 
-<h3>Add Attendees</h3></br>
+<h3>Add Attendees</h3>
 
 <div class="dropdown">
   Filter By 
