--- a/app/views/events/summary.html.erb
+++ b/app/views/events/summary.html.erb
@@ -26,8 +26,8 @@
 </div>
 
 <div class="row" >
-  <div class="col-sm-2"><label for="total_visitors"><b>Visitors/Newcomers:</b></label></div>
-  <div class="col-sm-10"><%= Attendee.visitors(@event).count %></div>
+  <div class="col-sm-2"><label for="total_visitors"><b>Newcomers:</b></label></div>
+  <div class="col-sm-10"><%= Attendee.first_timers(@event).count %></div>
 </div>
 
 <table class="table">
@@ -37,21 +37,21 @@
       <th>Contact No.</th>
       <th>Category</th>
       <th>eGroup</th>
-      <th>1st Visit</th>
       <th>Actions</th>
     </tr>
   </thead>
 
   <tbody>
-    <% Attendee.visitors(@event).each do |visitor| %>
+    <% Attendee.first_timers(@event).each do |visitor| %>
       <tr>
         <td><%= visitor.name %></td>
         <td><%= visitor.contact_no %></td>
         <td><%= visitor.category.capitalize %></td>
         <td><%= visitor.group %></td>
-        <td><%= visitor.created_at %></td>
         <td>
-          <%= link_to 'View', attendee_path(visitor) %>
+          <%= link_to attendee_path(visitor) do %>
+            <i style="font-size:1.5em;" class="glyphicon glyphicon-eye-open" title="View"></i>
+          <% end %>
         </td>
       </tr>
     <% end %>
