--- a/app/views/attendees/show.html.erb
+++ b/app/views/attendees/show.html.erb
@@ -41,6 +41,11 @@
 </div>
 
 <div class="row" >
+  <div class="col-sm-2"><label for="visits"><b>No. of Visits:</b></label></div>
+  <div class="col-sm-10"><%= @attendee.attendances_count %></div>
+</div>
+
+<div class="row" >
   <div class="col-sm-2"><label for="remark"><b>Remark:</b></label></div>
   <div class="col-sm-10"><%= @attendee.remark %></div>
 </div>
