--- a/app/views/attendees/_form.html.erb
+++ b/app/views/attendees/_form.html.erb
@@ -50,8 +50,8 @@
     </div>
 
     <div class="form-group">
-      <label for="photo_url" class="col-sm-2">Photo URL</label>
-      <div class="col-sm-10"><%= f.text_field :photo_url, class: "form-control" %></div>
+      <label for="image" class="col-sm-2">Image</label>
+      <div class="col-sm-10"><%= f.file_field :image, class: "form-control" %></div>
     </div>
 
     <div class="form-group">
