--- a/app/views/attendees/show.html.erb
+++ b/app/views/attendees/show.html.erb
@@ -26,11 +26,6 @@
 </div>
 
 <div class="row" >
-  <div class="col-sm-2"><label for="photo_url"><b>Photo URL:</b></label></div>
-  <div class="col-sm-10"><%= @attendee.photo_url %></div>
-</div>
-
-<div class="row" >
   <div class="col-sm-2"><label for="category"><b>Category:</b></label></div>
   <div class="col-sm-10"><%= @attendee.category %></div>
 </div>
@@ -48,6 +43,11 @@
 <div class="row" >
   <div class="col-sm-2"><label for="remark"><b>Remark:</b></label></div>
   <div class="col-sm-10"><%= @attendee.remark %></div>
+</div>
+
+<div class="row" >
+  <div class="col-sm-2"><label for="image"><b>Image:</b></label></div>
+  <div class="col-sm-10"><%= image_tag @attendee.image.url(:thumb) %></div>
 </div>
 </br>
 <div class="actions">
