--- a/app/assets/stylesheets/events.scss
+++ b/app/assets/stylesheets/events.scss
@@ -1,3 +1,18 @@
 // Place all the styles related to the events controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.box {
+  margin: 5px;
+  width: 100px;
+}
+
+.box img {
+  width: 100%;
+}
+
+.selected {
+  border-style: solid;
+  border-width: 3px;
+  border-color: green;
+}
