--- a/app/views/events/filter_attendees.js.erb
+++ b/app/views/events/filter_attendees.js.erb
@@ -1,2 +1,1 @@
-$("table.new-attendees").replaceWith('<%= escape_javascript(render("events/add_attendees", event: @event, new_attendees: @new_attendees)) %>');
-$("table.attendees").replaceWith('<%= escape_javascript(render("events/attendees", event: @event)) %>');
+$("#attendees").replaceWith('<%= escape_javascript(render("events/attendees", event: @event, group: @group)) %>');
