--- a/app/views/events/filter_attendees.js.erb
+++ b/app/views/events/filter_attendees.js.erb
@@ -1,1 +1,3 @@
 $("#attendees").replaceWith('<%= escape_javascript(render("events/attendees", event: @event, group: @group)) %>');
+var $attendees = $("#attendees")
+$attendees.masonry();
