--- a/app/views/reports/show.html.erb
+++ b/app/views/reports/show.html.erb
@@ -27,6 +27,7 @@
     <tr>
       <th>Name</th>
       <th>Category</th>
+      <th>Contact No</th>
     </tr>
   </thead>
 
@@ -35,6 +36,7 @@
       <tr>
         <td><%= attendee.name %></td>
         <td><%= attendee.category %></td>
+        <td><%= attendee.contact_no %></td>
       </tr>
     <% end %>
   </tbody>
@@ -47,6 +49,7 @@
     <tr>
       <th>Name</th>
       <th>Category</th>
+      <th>Contact No</th>
     </tr>
   </thead>
 
@@ -55,6 +58,7 @@
       <tr>
         <td><%= attendee.name %></td>
         <td><%= attendee.category %></td>
+        <td><%= attendee.contact_no %></td>
       </tr>
     <% end %>
   </tbody>
