--- a/app/views/attendees/_form.html.erb
+++ b/app/views/attendees/_form.html.erb
@@ -57,22 +57,14 @@
     <div class="form-group">
       <label for="category" class="col-sm-2">Category</label>
       <div class="col-sm-10">
-        <%= f.input :category, 
-            as: :select,
-            collection: Attendee::CATEGORY,
-            include_blank: false,
-            label: false %>
+        <%= f.association :attendee_category, label: false, include_blank: false %>
       </div>
     </div>
 
     <div class="form-group">
       <label for="group" class="col-sm-2">Group</label>
       <div class="col-sm-10">
-        <%= f.input :group, 
-            as: :select,
-            collection: Attendee::GROUP,
-            include_blank: false,
-            label: false %>
+        <%= f.association :attendee_group, label: false, include_blank: false %>
       </div>
     </div>
 
