--- a/app/views/reports/_form.html.erb
+++ b/app/views/reports/_form.html.erb
@@ -30,6 +30,13 @@
     </div>
 
     <div class="form-group">
+      <label for="type" class="col-sm-2">New Group</label>
+      <div class="col-sm-10">
+        <%= f.association :attendee_group, include_blank: false, label: false %>
+      </div>
+    </div>
+
+    <div class="form-group">
       <label for="date" class="col-sm-2">Remark</label>
       <div class="col-sm-10"><%= f.input :remark, as: :text, label: false, input_html: { rows: '4', cols: '50' }, class: "form-control" %></div>
     </div>
