--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -7,6 +7,7 @@
     <tr>
       <th>Author</th>
       <th>Group</th>
+      <th>New Group</th>
       <th>Created</th>
       <th>Actions</th>
     </tr>
@@ -17,6 +18,7 @@
       <tr>
         <td><%= report.author %></td>
         <td><%= report.group %></td>
+        <td><%= if report.attendee_group.blank? then "" else report.attendee_group.name end %></td>
         <td><%= report.created_at %></td>
         <td>
           <%= link_to event_report_path(@event, report) do %>
