--- a/app/views/reports/_form.html.erb
+++ b/app/views/reports/_form.html.erb
@@ -19,7 +19,7 @@
     </div>
 
     <div class="form-group">
-      <label for="type" class="col-sm-2">New Group</label>
+      <label for="type" class="col-sm-2">Group</label>
       <div class="col-sm-10">
         <%= f.association :attendee_group, include_blank: false, label: false %>
       </div>
